compiler/testData/diagnostics/tests/declarationChecks/LocalVariableWithNoTypeInformation.kt
// FIR_IDENTICAL
fun test() {
    konst <!VARIABLE_WITH_NO_TYPE_NO_INITIALIZER!>a<!>
}
